<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorWhite">

        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="vertical"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/back_btn"
                android:textColor="@color/colorBlack"
                android:gravity="center|left"
                android:textSize="30sp"/>
        </LinearLayout>


        <TextView
            android:id="@+id/tv_gallery"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/main_image_extraction"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ref"/>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/ll_filter0"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:orientation="vertical"
                android:background="@drawable/outline_textview">

                <TextView
                    android:id="@+id/tv_filter0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/filter_type0"
                    android:textColor="@color/colorBlack"
                    android:textSize="10sp"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="20dp"
                android:id="@+id/ll_filter1"
                android:layout_gravity="center_horizontal"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:orientation="vertical"
                android:background="@drawable/outline_textview">

                <TextView
                    android:id="@+id/tv_filter1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/filter_type1"
                    android:textColor="@color/colorBlack"
                    android:textSize="10sp"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="20dp"
                android:id="@+id/ll_filter2"
                android:layout_gravity="center_horizontal"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:orientation="vertical"
                android:background="@drawable/outline_textview">

                <TextView
                    android:id="@+id/tv_filter2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/filter_type2"
                    android:textColor="@color/colorBlack"
                    android:textSize="10sp"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="20dp"
                android:id="@+id/ll_filter3"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:orientation="vertical"
                android:background="@drawable/outline_textview">

                <TextView
                    android:id="@+id/tv_filter3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/filter_type3"
                    android:textColor="@color/colorBlack"
                    android:textSize="10sp"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/rgb_info"/>

                <TextView
                    android:id="@+id/tv_r"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/rgb_info_r"/>

                <TextView
                    android:id="@+id/tv_g"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/rgb_info_g"/>

                <TextView
                    android:id="@+id/tv_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/rgb_info_b"/>

                <TextView
                    android:id="@+id/tv_alpha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/rgb_info_total"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_apply"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/select_colr"
                    android:textColor="@color/colorBlack"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_result"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:text="@string/select_colr"
                        android:textSize="30dp"
                        android:textColor="@color/colorBlack"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="bottom"
                        android:text="@string/select_colr_"
                        android:textColor="@color/colorBlack"/>

                </LinearLayout>

                <ImageView
                    android:id="@+id/iv_color"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@color/colorBlack"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>