<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorWhite">

        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="vertical"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/back_btn"
                android:textColor="@color/colorBlack"
                android:gravity="center|left"
                android:textSize="30sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_tab0"
            android:layout_marginTop="30dp"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:text="@string/main_filter_setting"
            android:textColor="@color/colorBlack"
            android:textSize="30sp"
            android:textAlignment="center"/>

        <GridLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:columnCount="2"
            android:rowCount="2">


            <LinearLayout
                android:id="@+id/ll_filter0"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:background="@drawable/outline_textview">

                <TextView
                    android:id="@+id/tv_filter0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/lenses_type0"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="20dp"
                android:id="@+id/ll_filter1"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:background="@drawable/outline_textview">

                <TextView
                    android:id="@+id/tv_filter1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/lenses_type1"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_filter2"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:background="@drawable/outline_textview">

                <TextView
                    android:id="@+id/tv_filter2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/lenses_type2"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="20dp"
                android:id="@+id/ll_filter3"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:background="@drawable/outline_textview">

                <TextView
                    android:id="@+id/tv_filter3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/lenses_type3"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"
                    android:gravity="center"/>
            </LinearLayout>
        </GridLayout>

        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scrollbar"
                android:textColor="@color/colorBlack"/>

            <SeekBar
                android:id="@+id/seekbar"
                android:progress="50"
                android:max="100"
                android:thumb="@drawable/seekbar_seekbar1_thumb"
                android:progressDrawable="@drawable/seekbar_seekbar1"
                android:layout_marginLeft="20dp"
                android:layout_width="200dp"
                android:layout_height="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="60dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_reset"
                android:layout_gravity="center_horizontal"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:orientation="vertical"
                android:background="@drawable/outline_textview_primarycolor">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/reset"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_apply"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:orientation="vertical"
                android:background="@drawable/outline_textviw_background_primarycolor">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/apply"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:gravity="center"/>
            </LinearLayout>


        </LinearLayout>

        <ImageView
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/spectrum"/>

    </LinearLayout>


</ScrollView>